# goph420-w2023-lab00-stBK

./: README.md  pyproject.toml
examples/: driver.py
src/fem_1d_heat/: element.py
src/my_python_package/: operators.py
